kubernetes-projects/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorecalifornia.com
  name: explorecalifornia.com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorecalifornia.com
  strategy: {}
  template:
    metadata:
      labels:
        app: explorecalifornia.com
    spec:
      containers:
        - image: kaungmyathan/explorecalifornia.com
          name: explorecalifornia-com-4r6vm
          resources: {}
